--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "blog_creation"
 version = "0.1.0"
 description = "blog_creation using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
-requires-python = ">=3.10,<3.14"
+requires-python = ">=3.10,<=3.13.2"
 dependencies = [
     "crewai[tools]>=0.148.0,<1.0.0"
 ]
